# itmo_programming_tasks

./: CMakeLists.txt  README.md
src/: parallelogram.c  parallelogram.h  task1.c  task10.c  task11.c  task12.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
